--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="button" [style.background]=background [style.color]= color>{{text}}</button>
+<button class="button" [style.background]=background [style.color]= color [disabled]=disabled>{{text}}</button>
