refactoring + design fix

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card-container">
-  <h2>Name: {{name}}</h2>
+  <h2>Title: {{name}}</h2>
   <p>Description: {{description}}</p>
   <p>Due Date: {{dueDate}}</p>
-  <app-button text="delete" background="red" color="black" (click)="onDelete(index)" > </app-button>
+  <app-button text="Delete" background="#f44336" color="black" (click)="onDelete(index)" > </app-button>
 </div>
