--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
-    background-color: #004de6;
+    background-color: rgb(41,137,215);
     border-radius: 5px;
     color: white;
+    align-items: center;
 }
