--- a/src/app/input/input.component.css
+++ b/src/app/input/input.component.css
@@ -1,5 +1,11 @@
+.input-main-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
 .input-container {
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    width: 75%;
+    align-items: center;
 }
